Fixed the otp input box not centered on the ipad pro landscape display mode and on the iphone 8 plus display

--- a/components/resetOtp/styles.module.scss
+++ b/components/resetOtp/styles.module.scss
@@ -73,6 +73,12 @@
     background: var(--white);
     scroll-behavior: smooth;
 
+    @media screen and (max-width: 1400px) {
+      flex: 1;
+      padding: 164px 32px 67px;
+      height: 100%;
+    }
+
     @media screen and (max-width: 1200px) {
       flex: 1;
       padding: 164px 32px 67px;
@@ -84,7 +90,9 @@
       padding: 164px 82px 67px;
       height: 100%;
     }
-
+    @media screen and (max-width: 700px) {
+      padding: 64px 16px 67px;
+    }
     @media screen and (max-width: 400px) {
       padding: 64px 16px 67px;
     }
